# rivetr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.sh  rivetr.example.toml  rivetr.local.toml  rivetr.test.toml  rustfmt.toml
.claude/agents/: code-reviewer.md  debugger.md  frontend-reviewer.md  security-reviewer.md  test-runner.md
.claude/skills/api-testing/: SKILL.md
.claude/skills/database-operations/: SKILL.md
.claude/skills/deployment-pipeline/: SKILL.md
.claude/skills/docker-testing/: SKILL.md
.claude/skills/frontend-patterns/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/ralph/: SKILL.md
.claude/skills/rust-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ansible/: README.md  inventory.example  rivetr.yml
ansible/group_vars/: rivetr.yml.example
ansible/templates/: nginx-rivetr.conf.j2  rivetr.service.j2  rivetr.toml.j2
deploy/: rivetr-proxy.socket  rivetr.service  rivetr.socket
docs/: AI_OPPORTUNITIES.md  ARCHITECTURE.md  COMPETITIVE-GAP-ANALYSIS.md  COOLIFY-FEATURE-GAPS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ARCHIVE.md  RALPH_GUIDE.md  README.md  REFACTORING.md  SERVICE-TEMPLATES.md  TASKS.md
docs/architecture/: code-organization.md
docs/archive/: implementation-plan.md
docs/audit/: README.md  performance-audit.md  security-audit.md  ui-ux-audit.md
docs/planning/: ai-opportunities.md  tasks.md
docs/react-router/: NavLink.md  actions.md  data-loading.md  route-module.md  routing.md  sessions-and-cookies.md  useFetcher.md  useLocation.md
docs/reference/: api.md  configuration.md  service-templates.md
docs/research/: competitive-gap-analysis.md
frontend/: components.json  package-lock.json  package.json  react-router.config.ts  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: alerts-card.tsx  app-sharing-card.tsx  app-sidebar.tsx  basic-auth-card.tsx  bitbucket-repo-picker.tsx  container-labels-card.tsx  container-labels-editor.tsx  container-terminal.tsx  cost-summary-card.tsx  deploy-side-panel.tsx  deployment-commands-card.tsx  deployment-logs.tsx  deployment-timeline.tsx  docker-registry-card.tsx  domain-management-card.tsx  env-vars-tab.tsx  github-repo-picker.tsx  github-source-card.tsx  gitlab-repo-picker.tsx  linked-databases-section.tsx  move-to-project-card.tsx  nav-apps.tsx  nav-brand.tsx  nav-main.tsx  nav-user.tsx  network-config-card.tsx  pagination-controls.tsx  project-card.tsx  (+16 more)
frontend/src/: App.tsx  index.css
live-testing/: CREDENTIALS.md  TEST-STATUS.md  TESTING-GUIDE.md  VM-SWEEP-2026-05-02.md  VM-VALIDATION-2026-05-02-backend.md  VM-VALIDATION-2026-05-02-frontend.md  VM-VALIDATION-2026-05-02-v0.10.21.md  VM-VALIDATION-2026-05-02.md  deployment-test-findings.md  test-deployment.md
migrations/: 001_initial.sql  002_users.sql  003_rollback.sql  004_ssh_keys.sql  005_git_providers.sql  006_environment.sql  007_projects.sql  008_env_vars_update.sql  009_build_options.sql  010_domains.sql  011_network_config.sql  012_basic_auth.sql  013_deployment_commands.sql  014_docker_registry.sql  015_teams.sql  016_notifications.sql  017_container_labels.sql  018_volumes.sql  019_databases.sql  020_databases_project.sql  021_database_backups.sql  022_services.sql  023_service_templates.sql  024_audit_logs.sql  025_stats_history.sql  026_build_type.sql  027_preview_deployments.sql  028_github_apps.sql  029_deployment_source.sql  030_auto_rollback.sql  031_stats_aggregation.sql  032_databases_team.sql  032_resource_metrics.sql  033_alert_configs.sql  033_services_team.sql  034_alert_events.sql  034_team_invitations.sql  035_team_audit_logs.sql  035_team_notification_channels.sql  036_app_shares.sql  (+78 more)
plan/: ARCHITECTURE.md  PHASES.md  README.md  TASKS.md  TECH_STACK.md
scripts/: deploy-dev.sh  deploy-vm.sh  setup.ps1  setup.sh
scripts/ralph/: .last-branch  README.md  prd.json  prd.json.example  progress.txt  prompt.md  ralph.ps1  ralph.sh
src/: ai.rs  backup.rs  lib.rs  main.rs
src/api/: ai_features.rs  alerts.rs  api_tokens.rs  apps.rs  audit.rs  auth.rs  authz.rs  autoscaling.rs  basic_auth.rs  build_servers.rs  bulk.rs  ca_certificates.rs  clone.rs  cloudflare_tunnels.rs  community_templates.rs  cost_rates.rs  costs.rs  database_backups.rs  database_extensions.rs  database_links.rs  databases.rs  deployments.rs  destinations.rs  domains.rs  env_vars.rs  environments.rs  error.rs  filesystem.rs  git_providers.rs  github_apps.rs  instance_settings.rs  jobs.rs  log_drains.rs  metrics.rs  mod.rs  monitoring.rs  notifications.rs  oauth.rs  patches.rs  previews.rs  (+26 more)
src/backup/: mod.rs  s3.rs
src/cli/: backup.rs  database.rs  deploy.rs  mod.rs  server.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/db/: mod.rs  models.rs  seeders.rs
src/engine/: alert_evaluator.rs  build_detect.rs  cleanup.rs  container_monitor.rs  cost_calculator.rs  database_backups.rs  database_config.rs  disk_monitor.rs  mod.rs  nixpacks.rs  pack_builder.rs  pipeline.rs  preview.rs  railpack.rs  remote.rs  resource_metrics_collector.rs  scheduler.rs  static_builder.rs  stats_collector.rs  updater.rs  zip_extract.rs
src/github/: api_client.rs  mod.rs  token_manager.rs
src/logging/: drain.rs  mod.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/monitoring/: log_cleaner.rs  mod.rs  uptime.rs
src/notifications/: alert_notifications.rs  email.rs  gotify.rs  lark.rs  mattermost.rs  mod.rs  ntfy.rs  pushover.rs  resend.rs  sendry.rs  teams.rs  telegram.rs
src/proxy/: acme.rs  handler.rs  health_checker.rs  mod.rs  service.rs  tls.rs
src/runtime/: docker.rs  mod.rs  podman.rs
src/startup/: mod.rs
src/tui/: api.rs  app.rs  mod.rs  ui.rs
src/ui/: email.rs  mod.rs  templates.rs
src/utils/: mod.rs  supervise.rs
tasks/: prd-resource-alerts-cost-estimation.md
templates/: app_detail.html  app_new.html  apps.html  base.html  dashboard.html  login.html
(+335 files in other folders)
