[package]
name = "rivetr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A fast, lightweight deployment engine"
license = "MIT"
repository = "https://github.com/yourusername/rivetr"
keywords = ["deployment", "paas", "docker", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Docker
bollard = "0.18"

# Git
git2 = "0.19"

# Proxy & HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

# State management
arc-swap = "1"
dashmap = "6"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tar = "0.4"
async-stream = "0.3"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
zip = "2.2"

# Auth
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# ACME (Let's Encrypt) - using ring for key generation
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
base64 = "0.22"
ring = "0.17"
pem = "3"

# Encryption (AES-256-GCM for env var encryption)
aes-gcm = "0.10"

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
flate2 = "1.1.5"
tempfile = "3.24.0"
tokio-util = { version = "0.7.17", features = ["io"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
